feat: add content

--- a/index.html
+++ b/index.html
@@ -4,11 +4,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Willian D. Andrade | Software Engineer</title>
+  <title>Willian Duarte de Andrade | Staff Software Engineer | Tech Lead | Golang | NodeJS | Typescript | C#</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/assets/style.css" />
+
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <main>
+    <header>
+      <div>
+        <h1>
+          Willian Duarte de Andrade
+        </h1>
+        <h2>👨‍💻 Staff Software Engineer | Tech Lead</h2>
+        <span>⚡ Golang | NodeJS | Typescript | C#</span>
+      </div>
+
+      <ul>
+        <li class="social resume">
+          <a href="/assets/2024-Willian-Andrade.pdf" title="Willian Duarte de Andrade Resume (CV)">
+            Resume (CV)
+          </a>
+        </li>
+
+        <li class="social linkedin">
+          <a href="https://www.linkedin.com/in/williandandrade/" title="LinkedIn @williandandrade">
+            LinkedIn
+          </a>
+        </li>
+
+        <li class="social github">
+          <a href="https://github.com/williandandrade/" title="Github @williandandrade">
+            Github
+          </a>
+        </li>
+
+        <li class="social x">
+          <a href="https://twitter.com/wildandrade/" title="X/Twitter @wildandrade">
+            X/Twitter
+          </a>
+        </li>
+        <!-- 
+          <li class="social instagram">
+          <a href="https://www.instagram.com/will.d.andrade/" title="Instagram @will.d.andrade">
+            Instagram
+          </a>
+        </li>
+
+        <li class="social medium">
+          <a href="https://medium.com/@williandandrade/" title="Medium @williandandrade">
+            Medium
+          </a>
+        </li>
+
+        <li class="social hashnode">
+          <a href="https://williandandrade.hashnode.dev/" title="Hashnode @williandandrade">
+            Hashnode
+          </a>
+        </li>
+
+        <li class="social devto">
+          <a href="https://dev.to/williandandrade/" title="DevTo @williandandrade">
+            DevTo
+          </a>
+        </li>
+      -->
+      </ul>
+    </header>
+  </main>
+  <script type="text/javascript">
+    (function (window, document, dataLayerName, id) {
+      window[dataLayerName] = window[dataLayerName] || [], window[dataLayerName].push({ start: (new Date).getTime(), event: "stg.start" }); var scripts = document.getElementsByTagName('script')[0], tags = document.createElement('script');
+      function stgCreateCookie(a, b, c) { var d = ""; if (c) { var e = new Date; e.setTime(e.getTime() + 24 * c * 60 * 60 * 1e3), d = "; expires=" + e.toUTCString(); f = "; SameSite=Strict" } document.cookie = a + "=" + b + d + f + "; path=/" }
+      var isStgDebug = (window.location.href.match("stg_debug") || document.cookie.match("stg_debug")) && !window.location.href.match("stg_disable_debug"); stgCreateCookie("stg_debug", isStgDebug ? 1 : "", isStgDebug ? 14 : -1);
+      var qP = []; dataLayerName !== "dataLayer" && qP.push("data_layer_name=" + dataLayerName), isStgDebug && qP.push("stg_debug"); var qPString = qP.length > 0 ? ("?" + qP.join("&")) : "";
+      tags.async = !0, tags.src = "https://williandandrade.containers.piwik.pro/" + id + ".js" + qPString, scripts.parentNode.insertBefore(tags, scripts);
+      !function (a, n, i) { a[n] = a[n] || {}; for (var c = 0; c < i.length; c++)!function (i) { a[n][i] = a[n][i] || {}, a[n][i].api = a[n][i].api || function () { var a = [].slice.call(arguments, 0); "string" == typeof a[0] && window[dataLayerName].push({ event: n + "." + i + ":" + a[0], parameters: [].slice.call(arguments, 1) }) } }(i[c]) }(window, "ppms", ["tm", "cm"]);
+    })(window, document, 'dataLayer', 'd2256169-a092-4238-ae0f-84f5995cf99f');
+  </script>
 </body>
 
 </html>
