feat: changing css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Willian Duarte de Andrade | Staff Software Engineer | Tech Lead | Golang | NodeJS | Typescript | C#</title>
+  <title>Willian Duarte de Andrade | Software Engineer | Tech Lead</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="/assets/reset.css" />
   <link rel="stylesheet" href="/assets/style.css" />
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
@@ -23,65 +24,60 @@
 <body>
   <main>
     <header>
-      <div>
-        <h1>
-          Willian Duarte de Andrade
-        </h1>
-        <h2>👨‍💻 Staff Software Engineer | Tech Lead</h2>
-        <span>⚡ Golang | NodeJS | Typescript | C#</span>
-      </div>
-
-      <ul>
-        <li class="social resume">
-          <a href="/assets/2024-Willian-Andrade.pdf" title="Willian Duarte de Andrade Resume (CV)">
-            Resume (CV)
-          </a>
-        </li>
-
-        <li class="social linkedin">
-          <a href="https://www.linkedin.com/in/williandandrade/" title="LinkedIn @williandandrade">
-            LinkedIn
-          </a>
-        </li>
-
-        <li class="social github">
-          <a href="https://github.com/williandandrade/" title="Github @williandandrade">
-            Github
-          </a>
-        </li>
-
-        <li class="social x">
-          <a href="https://twitter.com/wildandrade/" title="X/Twitter @wildandrade">
-            X/Twitter
-          </a>
-        </li>
-        <!-- 
-          <li class="social instagram">
+      <h1>
+        Willian Duarte de Andrade
+      </h1>
+      <h2>👨‍💻 Software Engineer | Tech Lead</h2>
+      <span>⚡ Golang | NodeJS | Typescript | C#</span>
+    </header>
+    <section class="content">
+      <div class="social">
+        <ul>
+          <li class="resume">
+            <a href="/assets/2024-Willian-Andrade.pdf" title="Willian Duarte de Andrade Resume">
+              <i class="icon icon-resume">Willian Duarte de Andrade Resume</i>
+            </a>
+          </li>
+          <li class="linkedin">
+            <a href="https://www.linkedin.com/in/williandandrade/" title="LinkedIn in/williandandrade">
+              <i class="icon icon-linkedin">LinkedIn in/williandandrade</i>
+            </a>
+          </li>
+          <li class="github">
+            <a href="https://github.com/williandandrade/" title="Github @williandandrade">
+              <i class="icon icon-github">Github @williandandrade</i>
+            </a>
+          </li>
+          <li class="twitter">
+            <a href="https://twitter.com/wildandrade/" title="Twitter @wildandrade">
+              <i class="icon icon-twitter">Twitter @wildandrade</i>
+            </a>
+          </li>
+          <!--
+          <li class="instagram">
           <a href="https://www.instagram.com/will.d.andrade/" title="Instagram @will.d.andrade">
             Instagram
           </a>
         </li>
-
-        <li class="social medium">
+        <li class="medium">
           <a href="https://medium.com/@williandandrade/" title="Medium @williandandrade">
             Medium
           </a>
         </li>
-
-        <li class="social hashnode">
+        <li class="hashnode">
           <a href="https://williandandrade.hashnode.dev/" title="Hashnode @williandandrade">
             Hashnode
           </a>
         </li>
-
-        <li class="social devto">
+        <li class="devto">
           <a href="https://dev.to/williandandrade/" title="DevTo @williandandrade">
             DevTo
           </a>
         </li>
       -->
-      </ul>
-    </header>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 
