feat: update cv

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="social">
         <ul>
           <li class="resume">
-            <a href="/assets/2024-Willian-Andrade.pdf" title="Willian Duarte de Andrade Resume">
-              <i class="icon icon-resume">Willian Duarte de Andrade Resume</i>
+            <a href="/assets/2024-Willian-Duarte-de-Andrade.pdf" title="Willian Duarte de Andrade Resume (CV)">
+              <i class="icon icon-resume">Willian Duarte de Andrade Resume (CV)</i>
             </a>
           </li>
           <li class="linkedin">
